--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".CoffeeApplication"
         android:allowBackup="true"
@@ -14,9 +18,8 @@
         android:theme="@style/Theme.Coffee"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.home.MakeCoffeeActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Coffee">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.home.MakeCoffeeActivity" />
+        <activity android:name=".ui.settings.SettingActivity" />
     </application>
 
 </manifest>
