--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.Coffee"
         tools:targetApi="31">
         <activity
-            android:name=".ui.home.MakeCoffeeActivity"
+            android:name=".ui.firstinstall.InstallSettingActivity"
             android:exported="true"
             android:theme="@style/Theme.Coffee">
             <intent-filter>
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.home.MakeCoffeeActivity" />
         <activity android:name=".ui.settings.SettingActivity" />
     </application>
 
