降低serialization版本到1.6.0，解决kotlin core版本冲突
(cherry picked from commit fc70b978d889c66831b0e02770b6859dc4d54d7f)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ hilt = "2.51.1"
 coroutines = "1.8.0"
 lifecycle = "2.7.0"
 androidx-hilt-navigation-compose = "1.0.0"
-kotlinx-serialization = "1.7.0-RC"
+kotlinx-serialization = "1.6.0"
 work_version = "2.9.0"
 
 [libraries]
