--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
 agp = "8.4.0"
-kotlin = "1.9.0"
-ksp = "1.9.20-1.0.13"
-coreKtx = "1.10.1"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.21"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.8.0"
-composeBom = "2023.08.00"
+lifecycleRuntimeKtx = "2.8.2"
+activityCompose = "1.9.0"
+composeBom = "2024.06.00"
 room = "2.6.1"
 navigationCompose = "2.7.7"
 hilt = "2.51.1"
 coroutines = "1.8.0"
-lifecycle = "2.7.0"
-androidx-hilt-navigation-compose = "1.0.0"
+lifecycle = "2.8.2"
+androidx-hilt-navigation-compose = "1.2.0"
 kotlinx-serialization = "1.6.0"
 work_version = "2.9.0"
 jbcrypt = "0.4"
@@ -55,6 +55,7 @@ org-mindrot = { group = "org.mindrot", name = "jbcrypt", version.ref = "jbcrypt"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "agp" }
