添加显示模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".ui.settings.statistics.history.StatisticHistoryActivity" />
         <activity android:name=".ui.settings.formula.FormulaActivity" />
         <activity android:name=".ui.settings.serialtest.SerialPortActivity" />
+        <activity android:name=".ui.settings.display.DisplayActivity" />
     </application>
 
 </manifest>
