--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,8 +23,8 @@ datastore = "1.1.1"
 coil = "2.2.2"
 constraintlayout = "1.0.1"
 fragment_version = "1.8.1"
-viewpager2 = "1.1.0"
 recyclerview = "1.3.2"
+leakcanary = "2.14"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,7 +46,6 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work_version" }
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment_version" }
-androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
@@ -62,6 +61,7 @@ kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 org-mindrot = { group = "org.mindrot", name = "jbcrypt", version.ref = "jbcrypt" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+square-leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
