替换启动页logo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".ui.firstinstall.InstallSettingActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:theme="@style/Theme.Coffee">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
