--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
             android:name=".ui.settings.SettingActivity"
             android:theme="@style/TransparentActivityTheme" />
         <activity android:name=".ui.settings.permissions.PermissionActivity" />
-        <activity android:name=".ui.settings.permissions.PermissionEditActivity" />
-        <activity android:name=".ui.settings.permissions.PermissionUserListActivity" />
+        <activity android:name=".ui.settings.permissions.deprecate.PermissionEditActivity" />
+        <activity android:name=".ui.settings.permissions.deprecate.PermissionUserListActivity" />
         <activity android:name=".ui.settings.statistics.StatisticActivity" />
         <activity android:name=".ui.settings.statistics.product.StatisticProductActivity" />
         <activity android:name=".ui.settings.statistics.machine.StatisticMachineActivity" />
