添加显示模块页面逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name=".ui.settings.formula.FormulaActivity" />
         <activity android:name=".ui.settings.serialtest.SerialPortActivity" />
         <activity android:name=".ui.settings.display.DisplayActivity" />
+        <activity android:name=".ui.settings.display.groupone.DisplaySettingActivity" />
     </application>
 
 </manifest>
