新增机器设置页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".ui.settings.serialtest.SerialPortActivity" />
         <activity android:name=".ui.settings.display.DisplayActivity" />
         <activity android:name=".ui.settings.display.groupone.DisplaySettingActivity" />
+        <activity android:name=".ui.settings.config.MachineConfigActivity" />
     </application>
 
 </manifest>
