添加豆缸磨刀模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".ui.settings.display.groupone.DisplaySettingActivity" />
         <activity android:name=".ui.settings.config.MachineConfigActivity" />
         <activity android:name=".ui.settings.params.MachineParamsActivity" />
+        <activity android:name=".ui.settings.bean.BeanGrinderActivity" />
     </application>
 
 </manifest>
