--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         <activity android:name=".ui.settings.config.MachineConfigActivity" />
         <activity android:name=".ui.settings.params.MachineParamsActivity" />
         <activity android:name=".ui.settings.bean.BeanGrinderActivity" />
+        <activity android:name=".ui.settings.bean.GrinderAdjustmentActivity" />
     </application>
 
 </manifest>
