--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
         <activity android:name=".ui.settings.params.MachineParamsActivity" />
         <activity android:name=".ui.settings.bean.BeanGrinderActivity" />
         <activity android:name=".ui.settings.bean.GrinderAdjustmentActivity" />
+        <activity android:name=".ui.settings.machinetest.MachineTestActivity" />
+        <activity android:name=".ui.settings.machinetest.MachineTestInputsActivity" />
+        <activity android:name=".ui.settings.machinetest.MachineTestOutputsActivity" />
     </application>
 
 </manifest>
