--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".ui.settings.machinetest.MachineTestActivity" />
         <activity android:name=".ui.settings.machinetest.MachineTestInputsActivity" />
         <activity android:name=".ui.settings.machinetest.MachineTestOutputsActivity" />
+        <activity android:name=".ui.settings.info.MachineInfoActivity" />
     </application>
 
 </manifest>
