添加机器信息页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity android:name=".ui.settings.machinetest.MachineTestInputsActivity" />
         <activity android:name=".ui.settings.machinetest.MachineTestOutputsActivity" />
         <activity android:name=".ui.settings.info.MachineInfoActivity" />
+        <activity android:name=".ui.settings.info.MachineInfoStatusActivity" />
     </application>
 
 </manifest>
