添加保养维修页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity android:name=".ui.settings.machinetest.MachineTestOutputsActivity" />
         <activity android:name=".ui.settings.info.MachineInfoActivity" />
         <activity android:name=".ui.settings.info.MachineInfoStatusActivity" />
+        <activity android:name=".ui.settings.maintenance.MaintenanceActivity" />
     </application>
 
 </manifest>
