--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".ui.settings.info.MachineInfoActivity" />
         <activity android:name=".ui.settings.info.MachineInfoStatusActivity" />
         <activity android:name=".ui.settings.maintenance.MaintenanceActivity" />
+        <activity android:name=".ui.settings.maintenance.ServiceParamActivity" />
     </application>
 
 </manifest>
