添加维修页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity android:name=".ui.settings.maintenance.MaintenanceActivity" />
         <activity android:name=".ui.settings.maintenance.ServiceParamActivity" />
         <activity android:name=".ui.settings.maintenance.FilterGuideActivity" />
+        <activity android:name=".ui.settings.maintenance.ServiceFunctionActivity" />
     </application>
 
 </manifest>
