添加储存还原页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".ui.settings.maintenance.FilterGuideActivity" />
         <activity android:name=".ui.settings.maintenance.ServiceFunctionActivity" />
         <activity android:name=".ui.settings.maintenance.TestFunctionActivity" />
+        <activity android:name=".ui.settings.maintenance.SaveRestoreActivity" />
     </application>
 
 </manifest>
