--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
         <activity android:name=".ui.settings.maintenance.ServiceFunctionActivity" />
         <activity android:name=".ui.settings.maintenance.TestFunctionActivity" />
         <activity android:name=".ui.settings.maintenance.SaveRestoreActivity" />
+        <activity android:name=".ui.settings.maintenance.ManualActivity" />
     </application>
 
 </manifest>
