提交洗机模块页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".ui.settings.maintenance.TestFunctionActivity" />
         <activity android:name=".ui.settings.maintenance.SaveRestoreActivity" />
         <activity android:name=".ui.settings.maintenance.ManualActivity" />
+        <activity android:name=".ui.settings.clean.CleanActivity" />
     </application>
 
 </manifest>
