添加远程控制页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".ui.settings.maintenance.SaveRestoreActivity" />
         <activity android:name=".ui.settings.maintenance.ManualActivity" />
         <activity android:name=".ui.settings.clean.CleanActivity" />
+        <activity android:name=".ui.settings.remote.RemoteMonitorActivity" />
     </application>
 
 </manifest>
